# Changelog
Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [UNRELEASED] -- XXXX-XX-XX

## [12.65.17] -- 2023-08-21
* Unique Key aus xtcasUserPrivilege entfernen, da es bei Azure Datenbanken zu Fehlern führt.

## [12.65.16] -- 2023-08-10
* Fehler in CAS Masken korrigeren. 

## [12.65.15] -- 2023-08-04
* Fehler in Prozedur xpcasInsertServiceMessage korrigieren.

## [12.65.14] -- 2023-08-04
* Zurückgezogene AWS bom Version zurücksetzen

## [12.65.13] -- 2023-08-04
* Fehlender KeyText in Masken und Prozeduren ergänzen. 

## [12.65.12] -- 2023-08-04
* service.event.dispatcher Abhängigkeit entfernen, da dieser selbst vom CAS abhängig ist und Probleme verursacht

## [12.65.11] -- 2023-08-03
* Einige native Queries zu JPA Queries ändern, damit Azure sie auflösen kann. 
* JPA Data Entities Column Textgrößen und Datenfeldtypen korrigieren.

## [12.65.10] -- 2023-08-03
* UserContext anhand des JDBC Dialects herausfinden, damit der richige Benutzer nach Ausführen einer Prozedur ermittelt werden kann.
* Azure Dependency hinzufügen zum besseren Umgehen mit JPA.

## [12.65.9] -- 2023-08-01
* Bekannter Fehler "Ungültiger Objektname "xtcasServiceMessageReceiverLoginType" fixen. Man kann das CAS nun auf einer leeren/alten Datenbank starten und dann ein Setup ausführen, auch wenn die Tabelle nicht existiert.
* aero.minova.service.event.dispatcher Abhängigkeit von setup nach service verschieben, da diese für Extensions benötigt wird und nicht für das Setup beim CAS.

## [12.65.8] -- 2023-07-25
* jackson-databind-nullable Abhängigkeit für aero.minova.github-Extension einbinden

## [12.65.7] -- 2023-07-24
* Automatisch generierte Doku für Tabellen aktualisieren.
* Workaround fürs Löschen von Benutzern, da sonst das CAS einfriert und man es neu starten muss.
* Anpassen der Feldergrößen in der Users-Maske.

## [12.65.6] -- 2023-07-21
* DBUser um Description erweitert.